# OEP-desktop

./: CMakeLists.txt  README.md  main.cpp
camera/: CMakeLists.txt  camera.hpp
camera/windows/: camera.cpp  camera_device.hpp
